# grounding-atlas

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ASSET_REUSE_MAP.md  CHANGELOG.md  CITATION.cff  DATA_SOURCES.md  GUARDRAILS.md  LICENSE  Makefile  PRELIMINARY_DATA.md  PROJECT_DESIGN.md  README.md  RESEARCH_STATEMENT.md  SECURITY.md  SUBMITTING.md  codemeta.json  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
calibration_discovery/: README.md
calibration_discovery/eval/: per_item_router.py  plot_risk_coverage.py  plot_router.py  plot_scale_frontier.py  selective_eval.py  uq_competence.py  uq_signals.py
calibration_discovery/results/: RESULTS.md  per_item.csv  per_item_neutral.csv  per_item_variant.csv  router_results.json  selective_eval.json  selective_eval_neutral.json  selective_eval_variant.json
data/: cyp3a4.csv  herg.csv
dataset/: README.md  croissant.json  tasks.json
decision_map/: DECISION_MAP.md
docs/: ALPHAGENOME_CEILING_DESIGN.md  BENCHMARK_DESIGN.md  BRIDGE_3WAY_PREREG.md  DATA_DENSITY_RUNG_DESIGN.md  DATA_WAR_THREAD.md  D_rater_protocol.md  FAILURE_MODES.md  GROUNDBENCH.md  GROUNDBENCH_SPEC.md  LAYER_LOCALIZATION_PREREG.md  MANUSCRIPT.md  MODALITY_LANDSCAPE.md  POSITION_SUPERHUMAN_SCIENTIST.md  README.md  REPORT.md  RL_ENV_DEEPRESEARCH.md  RL_ENV_PREREG.md  SESSION_CHECKPOINT_2026-06-11.md  SINGLE_CELL_RUNG_DESIGN.md  UQ_ROUTING_POC_DESIGN.md  WS1_BACKLOG.md  WS3_NONFP_ENDPOINT_DESIGN.md  ai_scientist_roadmap.md  capability_web_exposure.md  discoverer_causality_notes.md  field_message.md  leaderboard.html  methylation_posttrain_poc.md  missing_axes_plan.md  move3_priorart.md  move3_verifier_trust_design.md  signal_vs_architecture_perturbFM_2026_06_12.md
eval/: README.md  activation_arm.py  activation_arm_3d.py  activation_arm_dna.py  activation_arm_histo.py  activation_arm_image.py  activation_arm_methyl.py  activation_arm_msa.py  activation_arm_sc.py  activation_arm_spectra.py  activation_arm_textmol.py  analyze_ames.py  analyze_bridge3way.py  analyze_budget_sweep.py  analyze_layerloc.py  anchor_swap_frontier.py  audit_orientations.py  axis_a_chem.py  axis_a_dna.py  axis_a_dna_fakeacc.py  benchmark_tasks.py  bridge_arm.py  bridge_test_pi.py  budget_arm.py  build_holdout_oracle.py  calibration_routing.py  capability_trend.py  cayuga_e2.sbatch  cayuga_rl.sbatch  cayuga_sfm_activation.sbatch  cayuga_ws3_lora_cells.sbatch  ceiling_gate.py  compare_rl_orchestrate.py  computable_scale_sweep.py  compute_ceilings.py  d_agreement.py  d_rating_sheet_template.csv  decimer_ocsr.py  elicit_confidence.py  expanse_rl.sbatch  (+67 more)
eval/data/: neg_ames.csv  neg_ames_admet103.csv  neg_cyp2d6.csv  neg_cyp3a4.csv  neg_herg.csv
protein_grounding/: README.md
protein_grounding/data/: protein_meltome.csv  protein_meltome_named.csv
protein_grounding/eval/: README.md  activation_arm_protein.py  ceiling_gate_protein.py  comprehension_probe.py  head_to_head_protein.py  prepare_data.py  run_activation_cayuga.sh  run_ceiling_cayuga.sh  setup_data_cayuga.sh
protein_grounding/results/: ceiling_gate.md  head_to_head.md
results/: README.md  SYNTHESIS.md  axis_a_chem.json  axis_a_chem.md  axis_a_dna.json  axis_a_dna.md  axis_a_dna_fakeacc.json  bridge_test_pi.json  calibration_routing.json  calibration_routing.md  ceiling_gate.md  computable_property_row.md  computable_scale_sweep.json  confound_controls.md  decimer_ocsr.json  decision_map_placement.md  dna_act_peritem.json  dna_promoter.md  frontier_output_panel.json  frontier_output_panel.md  generality_materials.md  generality_panel.md  head_to_head.md  histopath_rung.md  image_rung.json  image_rung.md  layer_profiles.json  layer_profiles.md  lipophilicity_control.json  lipophilicity_control.md  methylation_rung.md  msa_rung.md  negative_expression_gap.json  negative_expression_gap.md  negative_expression_gap_anon.json  negative_expression_gap_anon_sonnet.json  negative_expression_gap_sonnet.json  notation_control.json  notation_control.md  orchestrate_arm.json  (+36 more)
results/benchmark/: LEADERBOARD.md  README.md  budget_arm.json  budget_arm.md  budget_arm_anon_n200.json  capability_trend.json  capability_trend.md  ceilings.json  routing.json  routing_arm.md  routing_implicit.json  token_familiarity.md
signal/: README.md  dna_promoter.csv  gate_anon.py  gate_multimodal.py  generate_computable.py  generate_signal.py  verifiability_multimodal.json  verifiability_multimodal.md  verifiability_report.md
signal/admet/: verifiability_report.json
signal/admet_tdc/: bbbp.csv  hiv.csv
signal/affinity/: davis.csv
signal/clinvar/: variant_text.csv
signal/computable/: decodability_report.json
signal/ecg/: ecg5000.csv
signal/generality/: aminoacid.csv  drugclass.csv  elements.csv  glass.csv  metabolite.csv  minerals.csv
signal/graph/: herg_graph.csv
signal/histo/: pcam.csv
signal/materials/: metal.csv
signal/methyl/: methyl_age.csv  methyl_age_clock.csv
signal/msa/: msa_conservation.csv
signal/nmr/: herg_nmr.csv
signal/ppi/: ppi.csv
signal/regulatory/: README.md  alphagenome_score.py  eqtl_ceiling_gate.py  gtex_eqtl_Whole_Blood.csv  gtex_eqtl_Whole_Blood_lead.csv  gtex_eqtl_fetch.py  variants_demo.csv
signal/rna/: coding.csv
signal/sfm_embedding/: meltome_esm2.npz  meltome_esm2_ceiling.json  rna_nt.npz
signal/single_cell/: build_cd8t_nk.py  cd8t_nk.csv  cd8t_nk_obscure.csv  data_density.csv  data_density.py  data_density_arm.csv  data_density_arm.py  data_density_arm_states.csv  mono_cd14_fcgr3a.csv  pbmc_Tcell.csv
signal/spectra_ms/: pairs.jsonl
signal/structure3d/: herg_xyz.csv
variant_grounding/: .gitignore  README.md
(+161 files in other folders)
